Flatmap-branch: Initial test code for consumerFlatMap